--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: "ニュース記事をまとめるサイト"
 theme: minima        # 標準テーマ
 show_excerpts: true  # トップで本文の冒頭を表示
 permalink: /:year/:month/:day/:title/
+url: "https://hanzai-bokumetsu.github.io"
+baseurl: "/news-site"
