--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ show_excerpts: true  # トップで本文の冒頭を表示
 permalink: /:year/:month/:day/:title/
 url: "https://hanzai-bokumetsu.github.io"
 baseurl: "/news-site"
+header_pages:
+  - about.md
