--- a/.github/workflows/fetch-news.yml
+++ b/.github/workflows/fetch-news.yml
@@ -2,7 +2,7 @@ name: Fetch & Post News
 
 on:
   schedule:
-    # JSTで 09:00 / 15:00 / 21:00 に回す（GitHubはUTC動作）
+    # JST 09:00 / 15:00 / 21:00（GitHubはUTC）
     - cron: "0 0,6,12 * * *"
   workflow_dispatch:
 
@@ -15,15 +15,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install feedparser requests python-slugify pyyaml readability-lxml lxml
@@ -31,13 +29,11 @@ jobs:
       - name: Run fetcher
         env:
           TZ: Asia/Tokyo
-        run: |
-          python scripts/rss_to_posts.py
+        run: python scripts/rss_to_posts.py
 
       - name: Commit & push if changed
         run: |
           git config user.name "news-bot"
-        # メールはGitHub標準のno-replyでOK
           git config user.email "actions@users.noreply.github.com"
           git add -A
           git diff --cached --quiet || git commit -m "chore: auto-post from RSS [skip ci]"
