--- a/.github/workflows/fetch-news.yml
+++ b/.github/workflows/fetch-news.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # rebaseに必要
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -33,8 +35,18 @@ jobs:
 
       - name: Commit & push if changed
         run: |
+          set -e
           git config user.name "news-bot"
           git config user.email "actions@users.noreply.github.com"
+
           git add -A
-          git diff --cached --quiet || git commit -m "chore: auto-post from RSS [skip ci]"
-          git push
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
+
+          # 最新を取り込んでからコミット→プッシュ
+          git pull --rebase origin "${{ github.ref_name }}" || true
+          git commit -m "chore: auto-post from RSS [skip ci]"
+          git push origin HEAD:"${{ github.ref_name }}" || \
+            git push --force-with-lease origin HEAD:"${{ github.ref_name }}"
