--- a/.github/workflows/fetch-news.yml
+++ b/.github/workflows/fetch-news.yml
@@ -2,7 +2,8 @@ name: Fetch & Post News
 
 on:
   schedule:
-    - cron: "3 * * * 1-5"   # 平日(月=1〜金=5)の毎時00分（UTC）
+    # 平日 (月〜金) JST 07:00〜19:00 を2時間おき
+    - cron: "0 22,0,2,4,6,8,10 * * 1-5"
   workflow_dispatch:
 
 permissions:
